--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0",
+    "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.0.12",
     "@vitejs/plugin-react": "^4.3.4",
     "globals": "^15.15.0",
     "vite": "^6.2.0"
